--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,16 @@
 <classpath>
 	<classpathentry kind="src" path="Plugin"/>
 	<classpathentry kind="src" path="AdminModule"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/SpaceTownDev/JavaDev/Creator/WorkSpace/Resources/craftbukkit-1.3.2-R0.1.jar"/>
-	<classpathentry kind="lib" path="C:/SpaceTownDev/JavaDev/Creator/WorkSpace/Resources/Vault.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="lib" path="Resources/craftbukkit-1.3.1-R2.0.jar" sourcepath="Resources/craftbukkit-1.3.1-R2.0 source">
+		<attributes>
+			<attribute name="javadoc_location" value="http://jd.bukkit.org/apidocs/"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="Resources/Vault.jar" sourcepath="Resources/Vault source">
+		<attributes>
+			<attribute name="javadoc_location" value="http://mythcraft.dyndns.org/javadoc/vault/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
