--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="Plugin"/>
-	<classpathentry kind="src" path="AdminModule"/>
+	<classpathentry kind="src" output="bin/Creator" path="Plugin"/>
+	<classpathentry kind="src" output="bin/AdminModule" path="AdminModule"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="Resources/craftbukkit-1.3.1-R2.0.jar" sourcepath="Resources/craftbukkit-1.3.1-R2.0 source">
 		<attributes>
